crates/core/tests/proc/ty/field_non_wire.stderr
error[E0277]: the trait bound `Bar: WireIO` is not satisfied
  --> tests/proc/ty/field_non_wire.rs:32:5
   |
32 |     y: Bar,
   |     ^^^^^^ unsatisfied trait bound
   |
help: the trait `WireIO` is not implemented for `Bar`
  --> tests/proc/ty/field_non_wire.rs:8:1
   |
 8 | struct Bar;
   | ^^^^^^^^^^
   = help: the following other types implement trait `WireIO`:
             &T
             &mut T
             ()
             *const T
             *mut T
             CStrPtr<'_>
             HashMap<K, V, S>
             MaybeUninit<T>
           and $N others
   = help: see issue #48214
